# photo-metadata-scrubber

./: README.md  pyproject.toml
src/: main.py
src/photo_metadata_scrubber/: logic.py
tests/: test_scrubber.py
